--- a/package.json
+++ b/package.json
@@ -2,5 +2,20 @@
   "name": "node-demo-101",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.9.0"
+  },
+  "scripts": {
+    "dev": "nodemon -r dotenv/config server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
